# itmsq

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: GoodsCode_length12_MVP.xlsx  Messages_For_CAS-QuotaRS_Integration_Document_v1.0.xlsx  Messages_For_CAS-QuotaRS_Integration_Document_v1.1.xlsx  PFM_ITMS_Quota_RS_Integration_Document_v1.0.docx  PFM_ITMS_Quota_and_Taric_MVP_smoke_test_report_v1.0.docx  PFM_ITMS_Taric_RS_Integration_Document_v1.0.docx  TARIC_RS_Messages.xlsx  TestCases_MVP_draft_v1.xlsx
docs/Taric - predefined data/: TC01_TaricRequest.xml  TC01_TaricResponse.xml  TC02_TaricRequest.xml  TC02_TaricResponse.xml  TC03_TaricRequest.xml  TC03_TaricResponse.xml  TC04_TaricRequest.xml  TC04_TaricResponse.xml  TC05_TaricRequest.xml  TC05_TaricResponse.xml  TC06_TaricRequest.xml  TC06_TaricResponse.xml  TC07_TaricRequest.xml  TC07_TaricResponse.xml  TC08_TaricRequest.xml  TC08_TaricResponse.xml  TC09_TaricRequest.xml  TC09_TaricResponse.xml  TC10_TaricRequest.xml  TC10_TaricResponse.xml  TC11_TaricRequest.xml  TC11_TaricResponse.xml  TC12_TaricRequest.xml  TC12_TaricResponse.xml  TC13_TaricRequest.xml  TC13_TaricResponse.xml  TC14_TaricRequest.xml  TC14_TaricResponse.xml  TC15_TaricRequest.xml  TC15_TaricResponse.xml  TC16_TaricRequest.xml  TC16_TaricResponse.xml  TC17_TaricRequest.xml  TC17_TaricResponse.xml  TC18_TaricRequest.xml  TC18_TaricResponse.xml  TC19_TaricRequest.xml  TC19_TaricResponse.xml  TC20_TaricRequest.xml  TC20_TaricResponse.xml  (+13 more)
src/itmsq/: __about__.py  __init__.py  __main__.py  broker.py  setup_sbmq.py  taric.py  (+1 more)
tests/: __init__.py
