[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itmsq"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Viktor Varga", email = "dewile@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Viktor Varga/itmsq#readme"
Issues = "https://github.com/Viktor Varga/itmsq/issues"
Source = "https://github.com/Viktor Varga/itmsq"

[tool.hatch.version]
path = "src/itmsq/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/itmsq tests}"

[tool.coverage.run]
source_pkgs = ["itmsq", "tests"]
branch = true
parallel = true
omit = [
  "src/itmsq/__about__.py",
]

[tool.coverage.paths]
itmsq = ["src/itmsq", "*/itmsq/src/itmsq"]
tests = ["tests", "*/itmsq/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
